Added fourth destination nsmed Malaga

--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
 			<div class="destination" id="riga">
                 <h2>Riga</h2>
             </div>
+			
+			<div class="destination" id="malaga">
+                <h2>Malaga</h2>
+            </div>
         </div>
     </div>
 
