--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
 			<div class="destination" id="malaga">
                 <h2>Malaga</h2>
             </div>
+			
+			<div class="destination" id="kathmandu">
+                <h2>Kathmandu</h2>
+            </div>
         </div>
     </div>
 
